@@ -181,6 +181,7 @@ void   mount_showthrough    (Mount *root);
 
 void   upstart_disconnected (DBusConnection *connection);
 void   emit_event           (const char *name);
+void   mount_event          (Mount *mnt);
 void   emit_event_error     (void *data, NihDBusMessage *message);
 
 void   udev_monitor_watcher (struct udev_monitor *udev_monitor,
@@ -1371,8 +1372,10 @@ try_mount (Mount *mnt,
 	if (! mnt->ready) {
 		queue_fsck (mnt);
 	} else if (is_swap (mnt)) {
+		mount_event (mnt);
 		run_swapon (mnt);
 	} else {
+		mount_event (mnt);
 		run_mount (mnt, FALSE);
 	}
 }
@@ -2206,6 +2209,57 @@ emit_event (const char *name)
 
 		return;
 	}
+
+	dbus_pending_call_unref (pending_call);
+}
+
+void
+mount_event (Mount *mnt)
+{
+	DBusPendingCall *pending_call;
+	nih_local char **env = NULL;
+	size_t           env_len = 0;
+	nih_local char * var = NULL;
+
+	nih_assert (mnt != NULL);
+
+	env = NIH_MUST (nih_str_array_new (NULL));
+
+	var = NIH_MUST (nih_sprintf (NULL, "DEVICE=%s",
+				     mnt->device ?: "none"));
+	NIH_MUST (nih_str_array_addp (&env, NULL, &env_len, var));
+	nih_discard (var);
+
+	var = NIH_MUST (nih_sprintf (NULL, "MOUNTPOINT=%s",
+				     mnt->mountpoint));
+	NIH_MUST (nih_str_array_addp (&env, NULL, &env_len, var));
+	nih_discard (var);
+
+	var = NIH_MUST (nih_sprintf (NULL, "TYPE=%s",
+				     mnt->type ?: "none"));
+	NIH_MUST (nih_str_array_addp (&env, NULL, &env_len, var));
+	nih_discard (var);
+
+	var = NIH_MUST (nih_sprintf (NULL, "OPTIONS=%s",
+				     mnt->opts ?: ""));
+	NIH_MUST (nih_str_array_addp (&env, NULL, &env_len, var));
+	nih_discard (var);
+
+	pending_call = NIH_SHOULD (upstart_emit_event (upstart,
+						       "mount", env, TRUE,
+						       NULL, emit_event_error, NULL,
+						       NIH_DBUS_TIMEOUT_NEVER));
+	if (! pending_call) {
+		NihError *err;
+
+		err = nih_error_get ();
+		nih_warn ("%s", err->message);
+		nih_free (err);
+
+		return;
+	}
+
+	dbus_pending_call_block (pending_call);
 
 	dbus_pending_call_unref (pending_call);
 }
