@@ -48,6 +48,8 @@ mountall (0.2.0) UNRELEASED; urgency=low
   * Still restart mountall even if the recovery shell fails.
   * Don't queue filesystem check when device is "none", or missing, or the
     filesystem is marked nodev.
+  * Generate a "mount" event before mounting a filesystem, and wait for its
+    effects to complete.
 
  -- Scott James Remnant <scott@ubuntu.com>  Thu, 08 Oct 2009 00:54:40 +0100
 
